# opencensus-proto

gen-go/agent/interaction/v1/: interaction_service.pb.go  interaction_service.pb.gw.go
gen-go/agent/web/v1/: interaction_service.pb.go  interaction_service.pb.gw.go
gen-go/exporterproto/: exporter.pb.go
gen-go/interaction/v1/: interaction.pb.go
gen-go/metricsproto/: metrics.pb.go
gen-go/web/v1/: web.pb.go
gen-openapi/agent/web/v1/: interaction_service.openapi.json
gen-openapi/opencensus/proto/exporter/: exporter.swagger.json
gen-openapi/opencensus/proto/metrics/: metrics.swagger.json
opencensus/proto/exporter/: exporter.proto
src/: mkgogen.sh
src/opencensus/proto/agent/interaction/v1/: BUILD.bazel  README.md  interaction_http.yaml  interaction_service.proto  interaction_service.swagger.json
src/opencensus/proto/agent/web/v1/: BUILD.bazel  interaction_http.yaml  interaction_service.proto  interaction_service_http.yaml
src/opencensus/proto/interaction/v1/: BUILD.bazel  README.md  interaction.proto
src/opencensus/proto/trace/v1/: trace.proto
