# Copyright 2018, OpenCensus Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

load("@grpc_java//:java_grpc_library.bzl", "java_grpc_library")
load("@org_pubref_rules_protobuf//go:rules.bzl", "go_proto_library")

proto_library(
    name = "interaction_service_proto",
    srcs = ["interaction_service.proto"],
    deps = [
        "//opencensus/proto/web/v1:web_proto",
    ],
)

cc_proto_library(
    name = "interaction_service_proto_cc",
    deps = [":interaction_service_proto"],
)

java_proto_library(
    name = "interaction_service_proto_java",
    deps = [":interaction_service_proto"],
)

java_grpc_library(
    name = "interaction_service_grpc_java",
    srcs = [":interaction_service_proto"],
    deps = [":interaction_service_proto_java"],
)

go_proto_library(
    name = "interaction_service_proto_go",
    protos = ["interaction_service.proto"],
    imports = [
        "external/com_google_protobuf/src",
    ],
    proto_deps = [
        "//opencensus/proto/web/v1:web_proto_go",
    ],
    pb_options = [
       # omit the go_package declared in proto files to make bazel works as expect
       "paths=source_relative",
    ],
)
